{
    "name": "GameControls",
    "maps": [
        {
            "name": "Player",
            "id": "5018a3e4-65e1-4ae2-bcaf-deb1d751567a",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "abe301d3-69f2-4e22-a4c4-571996d6c5a1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "1072ef36-24f1-41d2-9599-bc6944381658",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "996efe5f-9ce8-4573-8d1e-615cad11c839",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e18bc15d-465d-4f0e-a344-6cb93f8cbb0a",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b40d60e9-27b3-44fa-a9fd-b370a1cb2737",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89d49698-d442-48f1-a252-8c352266c0eb",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "Tap(duration=1.3)",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}